# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> etc-update: Added patch
  from #48218 to continue on to next file when answering "no" to the
  interactive replace prompt of menu option -3.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Fixed the space/tab
  usage through the spinner_msgs definition. Removed COMPILER from emerge info
  output.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Converted
  config.pkeywordsdict from {atom:[keyword]} to {cp:{atom:[keyword]}} to
  prevent a lot of unnecessary calculation.

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Added a percentage
  counter to the cache update phase based on patch from #68694

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py:
  s/macos/ppc-macos/ change.

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage_locks.py
  portage_db_flat.py: Fixed a couple of race conditions with regard to
  stating files.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py portage_util.py:
  Added syntax checking for package.mask, package.unmask and packages files.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> dohtml: Reimplemented the
  option processing to remove the dependency on optparse.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Made the invalid
  profile slightly more intelligable and got rid of the duplicate. Moved
  the profile KEYWORDS.invalid failure so that it only occurs if the
  corresponding KEYWORD is valid.

  23 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Added settings
  parameter to dep_virtual as the virtuals can now change during dep graph